Зафиксины баги: при добавлении группового счета нет первого пользователя по умолчанию, при добавлении группового счета клавиатура поверх layout, при загрузке картинки с высоким разрешением приложение не падает за счет сжатия картинки

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddGroupActivity" />
+        <activity android:name=".AddGroupActivity"
+            android:windowSoftInputMode="adjustPan"/>
         <activity android:name=".AddPersonalActivity" />
         <activity android:name=".AddProfileActivity" />
         <activity android:name=".ProfileActivity" />
