Групповые счета, создание счета между 2 пользавтелями, но нет реализации итого(пока не представляю как должно выглядеть, скорее всего понадобиться новая табличка в базе), нужно доработать дизайн на layout-ах, также исправлено несколько багов

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name=".EditProfileActivity"/>
         <activity android:name=".PersonalOpActivity" />
         <activity android:name=".AddPersonalOpActivity" />
+        <activity android:name=".GroupOpActivity"/>
+        <activity android:name=".AddGroupOpActivity"/>
         <activity android:name=".TipDialogActivity"
             android:theme="@android:style/Theme.Dialog" />
         <receiver android:name=".AlarmReceiver"/>
